Zmiana imion na Klaudia i Rafał + kod QR

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anna & Piotr - Nasze Wesele</title>
+    <title>Klaudia & Rafał - Nasze Wesele</title>
     <link rel="stylesheet" href="styles/main.css">
 </head>
 
@@ -23,7 +23,7 @@
     <section id="home" class="hero"
         style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('https://images.unsplash.com/photo-1519741497674-611481863552?w=1920') center/cover;">
         <div class="hero-content">
-            <h1>Anna & Piotr</h1>
+            <h1>Klaudia & Rafał</h1>
             <p class="date">15 czerwca 2024</p>
             <p class="subtitle">Zapraszamy na nasz wielki dzień!</p>
         </div>
@@ -36,23 +36,23 @@
                 <div class="person">
                     <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?w=500&h=500&fit=crop"
                         alt="Panna Młoda">
-                    <h3>Anna Kowalska</h3>
+                    <h3>Klaudia</h3>
                     <p>Miłośniczka książek, kawy i długich spacerów. Nie wyobrażam sobie życia bez śmiechu i przygód z
                         moim ukochanym.</p>
                 </div>
                 <div class="person">
                     <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=500&h=500&fit=crop"
                         alt="Pan Młody">
-                    <h3>Piotr Nowak</h3>
-                    <p>Pasjonat gór, dobrej muzyki i gotowania. Z Anią znalazłem swoją drugą połówkę i najlepszą
+                    <h3>Rafał</h3>
+                    <p>Pasjonat gór, dobrej muzyki i gotowania. Z Klaudią znalazłem swoją drugą połówkę i najlepszą
                         przyjaciółkę.</p>
                 </div>
             </div>
             <div class="love-story">
                 <h3>Nasza Historia</h3>
                 <p>Poznaliśmy się 5 lat temu na wspólnych wakacjach w górach. Od pierwszego spojrzenia wiedzieliśmy, że
-                    to coś wyjątkowego. Po trzech latach związku, podczas romantycznego weekendu nad morzem, Piotr
-                    oświadczył się Annie. Teraz nie możemy się doczekać, aby podzielić się naszym szczęściem z Wami!</p>
+                    to coś wyjątkowego. Po trzech latach związku, podczas romantycznego weekendu nad morzem, Rafał
+                    oświadczył się Klaudii. Teraz nie możemy się doczekać, aby podzielić się naszym szczęściem z Wami!</p>
             </div>
         </div>
     </section>
@@ -127,7 +127,12 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Anna & Piotr - Z miłością dla naszych gości</p>
+            <div class="qr-section">
+                <h3>Udostępnij stronę</h3>
+                <img src="kod_qr_wesele.jpg" alt="Kod QR do strony" class="qr-code">
+                <p>Zeskanuj kod QR, aby otworzyć stronę</p>
+            </div>
+            <p>&copy; 2024 Klaudia & Rafał - Z miłością dla naszych gości</p>
         </div>
     </footer>
 
