--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             <a href="#para-mloda">Para Młoda</a>
             <a href="#ceremonia">Ceremonia</a>
             <a href="#wesele">Wesele</a>
+            <a href="#harmonogram">Harmonogram</a>
+            <a href="#lokalizacja">Lokalizacja</a>
             <a href="#galeria">Galeria</a>
             <a href="#potwierdzenie">Potwierdzenie</a>
         </div>
@@ -24,7 +26,7 @@
         style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('https://images.unsplash.com/photo-1519741497674-611481863552?w=1920') center/cover;">
         <div class="hero-content">
             <h1>Klaudia & Rafał</h1>
-            <p class="date">15 czerwca 2024</p>
+            <p class="date">5 września 2026</p>
             <p class="subtitle">Zapraszamy na nasz wielki dzień!</p>
         </div>
     </section>
@@ -61,13 +63,15 @@
         <div class="container">
             <h2>Ceremonia Ślubna</h2>
             <div class="event-details">
-                <img src="https://images.unsplash.com/photo-1519167758481-83f29da8c2b6?w=800" alt="Kościół">
+                <img src="images/ceremonia/kosciol-marcin.jpg" alt="Kościół św. Marcina">
                 <div class="details">
-                    <h3>Kościół św. Anny</h3>
-                    <p><strong>Adres:</strong> ul. Kwiatowa 15, Warszawa</p>
-                    <p><strong>Godzina:</strong> 14:00</p>
-                    <p><strong>Parking:</strong> Dostępny przy kościele</p>
-                    <a href="https://maps.google.com" class="btn" target="_blank">Zobacz na mapie</a>
+                    <h3>Parafia Rzymskokatolicka św. Marcina</h3>
+                    <p><strong>Adres:</strong> ul. Krężnicka 136, 20-518 Lublin</p>
+                    <p><strong>Godzina:</strong> 15:00</p>
+                    <p><strong>Telefon:</strong> 81 750 09 58</p>
+                    <p><strong>Parking:</strong> Bezpłatny parking przy kościele</p>
+                    <p style="margin-top: 1rem;">Kościół św. Marcina to piękna świątynia położona w malowniczej dzielnicy Zemborzyc. To szczególne miejsce dla nas - tutaj Klaudia przyjęła sakrament chrztu. Kościół otoczony jest zielenią i oferuje spokojną, uroczystą atmosferę idealną na ceremonię ślubną.</p>
+                    <a href="https://www.google.com/maps/place/Krężnicka+136,+20-518+Lublin" class="btn" target="_blank">Zobacz na mapie</a>
                 </div>
             </div>
         </div>
@@ -77,15 +81,123 @@
         <div class="container">
             <h2>Przyjęcie Weselne</h2>
             <div class="event-details">
-                <img src="https://images.unsplash.com/photo-1519225421980-715cb0215aed?w=800" alt="Sala weselna">
+                <img src="images/wesele/hotel-kmicic.jpg" alt="Hotel Kmicic">
                 <div class="details">
-                    <h3>Dwór Romantyczny</h3>
-                    <p><strong>Adres:</strong> ul. Parkowa 7, Konstancin-Jeziorna</p>
+                    <h3>Hotel Kmicic</h3>
+                    <p><strong>Adres:</strong> Zemborzyce Dolne 62, 20-515 Lublin</p>
                     <p><strong>Godzina:</strong> 17:00</p>
-                    <p><strong>Parking:</strong> Duży parking dla gości</p>
-                    <p><strong>Nocleg:</strong> Możliwość noclegu na miejscu</p>
-                    <a href="https://maps.google.com" class="btn" target="_blank">Zobacz na mapie</a>
+                    <p><strong>Telefon:</strong> +48 81 756 60 00</p>
+                    <p><strong>Parking:</strong> Bezpłatny, przestronny parking dla wszystkich gości</p>
+                    <p><strong>Nocleg:</strong> Komfortowe pokoje hotelowe - rezerwacja przez Młodą Parę</p>
+                    <p style="margin-top: 1rem;">Hotel Kmicic to elegancki obiekt położony w sercu Zemborzyc, zaledwie 10 minut jazdy od kościoła. Oferuje przestronną, klimatyczną salę weselną, wyśmienitą kuchnię oraz profesjonalną obsługę. Otoczony zielenią i jeziorem, zapewnia wyjątkową atmosferę na niezapomniane przyjęcie!</p>
+                    <a href="https://www.kmicichotel.pl" class="btn" target="_blank">Strona hotelu</a>
+                    <a href="https://www.google.com/maps/place/Zemborzyce+Dolne+62,+20-515+Lublin" class="btn" target="_blank" style="margin-left: 1rem;">Zobacz na mapie</a>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="harmonogram" class="section bg-light">
+        <div class="container">
+            <h2>Harmonogram Dnia</h2>
+            <div class="timeline">
+                <div class="timeline-item">
+                    <div class="timeline-time">15:00</div>
+                    <div class="timeline-content">
+                        <h3>Ceremonia Ślubna</h3>
+                        <p>Parafia św. Marcina w Zemborzycach</p>
+                        <p>Prosimy o przybycie 15 minut wcześniej</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">16:00</div>
+                    <div class="timeline-content">
+                        <h3>Sesja Zdjęciowa</h3>
+                        <p>Zdjęcia z rodziną i gośćmi przy kościele</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">17:00</div>
+                    <div class="timeline-content">
+                        <h3>Powitanie w Hotelu Kmicic</h3>
+                        <p>Przywitanie gości chlebem i solą</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">17:30</div>
+                    <div class="timeline-content">
+                        <h3>Obiad Weselny</h3>
+                        <p>Pyszne dania i toast za młodą parę</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">19:00</div>
+                    <div class="timeline-content">
+                        <h3>Pierwszy Taniec</h3>
+                        <p>Otwarcie parkietu przez Młodą Parę</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">19:30</div>
+                    <div class="timeline-content">
+                        <h3>Zabawa do Białego Rana</h3>
+                        <p>Muzyka, tańce i świetna zabawa!</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">01:00</div>
+                    <div class="timeline-content">
+                        <h3>Oczepiny</h3>
+                        <p>Tradycyjna część wesela</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="lokalizacja" class="section">
+        <div class="container">
+            <h2>Lokalizacja i Dojazd</h2>
+            
+            <div class="location-intro">
+                <p>Ceremonia i wesele odbędą się w Zemborzycach pod Lublinem - malowniczej dzielnicy otoczonej lasami i jeziorem. Oba miejsca znajdują się bardzo blisko siebie!</p>
+            </div>
+
+            <div class="locations-grid">
+                <div class="location-card">
+                    <h3>🕊️ Kościół św. Marcina</h3>
+                    <p><strong>ul. Turystyczna 2A, Zemborzyce</strong></p>
+                    <div class="map-container">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2469.123!2d22.6089!3d51.2089!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNTHCsDEyJzMyLjAiTiAyMsKwMzYnMzIuMCJF!5e0!3m2!1spl!2spl!4v1234567890" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    </div>
+                    <div class="directions">
+                        <h4>Dojazd:</h4>
+                        <p>📍 Z centrum Lublina: ~15 min (ul. Krańcowa → Turystyczna)</p>
+                        <p>📍 Z autostrady A4: zjazd Lublin Wschód, następnie kierunek Zemborzyce</p>
+                        <p>🅿️ Parking bezpłatny przy kościele</p>
+                    </div>
+                </div>
+
+                <div class="location-card">
+                    <h3>🏰 Hotel Kmicic</h3>
+                    <p><strong>ul. Turystyczna 2, Zemborzyce</strong></p>
+                    <div class="map-container">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2469.123!2d22.6089!3d51.2089!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNTHCsDEyJzMyLjAiTiAyMsKwMzYnMzIuMCJF!5e0!3m2!1spl!2spl!4v1234567890" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    </div>
+                    <div class="directions">
+                        <h4>Dojazd:</h4>
+                        <p>📍 Z kościoła: ~5 min (500m tą samą ulicą)</p>
+                        <p>📍 Z centrum Lublina: ~15 min</p>
+                        <p>🅿️ Duży bezpłatny parking dla gości</p>
+                        <p>🏨 Pokoje hotelowe - kontakt przez Młodą Parę</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="route-info">
+                <h3>🚗 Trasa: Kościół → Hotel (5 minut)</h3>
+                <p>Po ceremonii wystarczy pojechać tą samą ulicą (Turystyczna) około 500 metrów w kierunku jeziora. Hotel znajduje się po prawej stronie. Nie można się zgubić! 😊</p>
+                <p><strong>Wskazówka:</strong> Jeśli jedziesz za innymi gośćmi, po prostu jedź za nimi - wszyscy jedziemy w to samo miejsce!</p>
             </div>
         </div>
     </section>
@@ -107,7 +219,7 @@
     <section id="potwierdzenie" class="section">
         <div class="container">
             <h2>Potwierdzenie Obecności</h2>
-            <p class="center">Prosimy o potwierdzenie obecności do 1 maja 2024</p>
+            <p class="center">Prosimy o potwierdzenie obecności do 1 sierpnia 2026</p>
             <form class="rsvp-form">
                 <input type="text" placeholder="Imię i nazwisko" required>
                 <input type="email" placeholder="Email" required>
