--- a/index.html
+++ b/index.html
@@ -160,19 +160,18 @@
             <h2>Lokalizacja i Dojazd</h2>
             
             <div class="location-intro">
-                <p>Ceremonia i wesele odbędą się w Zemborzycach pod Lublinem - malowniczej dzielnicy otoczonej lasami i jeziorem. Oba miejsca znajdują się bardzo blisko siebie!</p>
+                <p>Ceremonia i wesele odbędą się w Zemborzycach pod Lublinem - malowniczej dzielnicy otoczonej lasami i jeziorem. Oba miejsca znajdują się blisko siebie!</p>
             </div>
 
             <div class="locations-grid">
                 <div class="location-card">
                     <h3>🕊️ Kościół św. Marcina</h3>
-                    <p><strong>ul. Turystyczna 2A, Zemborzyce</strong></p>
-                    <div class="map-container">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2469.123!2d22.6089!3d51.2089!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNTHCsDEyJzMyLjAiTiAyMsKwMzYnMzIuMCJF!5e0!3m2!1spl!2spl!4v1234567890" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                    </div>
+                    <p><strong>ul. Krężnicka 136, 20-518 Lublin</strong></p>
+                    <p>📞 Tel: 81 750 09 58</p>
+                    <img src="images/ceremonia/kosciol-marcin-2.jpg" alt="Kościół św. Marcina" style="width: 100%; border-radius: 10px; margin: 1rem 0;">
                     <div class="directions">
                         <h4>Dojazd:</h4>
-                        <p>📍 Z centrum Lublina: ~15 min (ul. Krańcowa → Turystyczna)</p>
+                        <p>📍 Z centrum Lublina: ~15 min (ul. Krańcowa → Krężnicka)</p>
                         <p>📍 Z autostrady A4: zjazd Lublin Wschód, następnie kierunek Zemborzyce</p>
                         <p>🅿️ Parking bezpłatny przy kościele</p>
                     </div>
@@ -180,13 +179,12 @@
 
                 <div class="location-card">
                     <h3>🏰 Hotel Kmicic</h3>
-                    <p><strong>ul. Turystyczna 2, Zemborzyce</strong></p>
-                    <div class="map-container">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2469.123!2d22.6089!3d51.2089!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNTHCsDEyJzMyLjAiTiAyMsKwMzYnMzIuMCJF!5e0!3m2!1spl!2spl!4v1234567890" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                    </div>
+                    <p><strong>Zemborzyce Dolne 62, 20-515 Lublin</strong></p>
+                    <p>📞 Tel: +48 81 756 60 00</p>
+                    <img src="images/wesele/sala-kmicic.jpg" alt="Hotel Kmicic - sala weselna" style="width: 100%; border-radius: 10px; margin: 1rem 0;">
                     <div class="directions">
                         <h4>Dojazd:</h4>
-                        <p>📍 Z kościoła: ~5 min (500m tą samą ulicą)</p>
+                        <p>📍 Z kościoła: ~10 min (5 km)</p>
                         <p>📍 Z centrum Lublina: ~15 min</p>
                         <p>🅿️ Duży bezpłatny parking dla gości</p>
                         <p>🏨 Pokoje hotelowe - kontakt przez Młodą Parę</p>
@@ -195,9 +193,11 @@
             </div>
 
             <div class="route-info">
-                <h3>🚗 Trasa: Kościół → Hotel (5 minut)</h3>
-                <p>Po ceremonii wystarczy pojechać tą samą ulicą (Turystyczna) około 500 metrów w kierunku jeziora. Hotel znajduje się po prawej stronie. Nie można się zgubić! 😊</p>
-                <p><strong>Wskazówka:</strong> Jeśli jedziesz za innymi gośćmi, po prostu jedź za nimi - wszyscy jedziemy w to samo miejsce!</p>
+                <h3>🚗 Trasa: Kościół → Hotel (10 minut, 5 km)</h3>
+                <div class="map-container" style="margin: 1.5rem 0;">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d9876.5!2d22.6!3d51.21!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e0!4m5!1s0x472259d3b3b3b3b3%3A0x1!2sKrężnicka+136%2C+20-518+Lublin!3m2!1d51.2089!2d22.6089!4m5!1s0x472259d3b3b3b3b3%3A0x2!2sZemborzyce+Dolne+62%2C+20-515+Lublin!3m2!1d51.2089!2d22.6089!5e0!3m2!1spl!2spl!4v1234567890" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                </div>
+                <p><strong>Wskazówka:</strong> Po ceremonii wyjedźcie z parkingu kościelnego i kierujcie się na południe w stronę jeziora. Hotel jest dobrze oznakowany. Jeśli jedziesz za innymi gośćmi, po prostu jedź za nimi - wszyscy jedziemy w to samo miejsce! 😊</p>
             </div>
         </div>
     </section>
@@ -206,6 +206,10 @@
         <div class="container">
             <h2>Galeria</h2>
             <div class="gallery-grid">
+                <img src="images/ceremonia/kosciol-marcin.jpg" alt="Kościół św. Marcina">
+                <img src="images/ceremonia/kosciol-marcin-2.jpg" alt="Kościół św. Marcina - wnętrze">
+                <img src="images/wesele/hotel-kmicic.jpg" alt="Hotel Kmicic">
+                <img src="images/wesele/sala-kmicic.jpg" alt="Sala weselna w Hotelu Kmicic">
                 <img src="https://images.unsplash.com/photo-1606800052052-a08af7148866?w=600" alt="Zdjęcie 1">
                 <img src="https://images.unsplash.com/photo-1511285560929-80b456fea0bc?w=600" alt="Zdjęcie 2">
                 <img src="https://images.unsplash.com/photo-1465495976277-4387d4b0b4c6?w=600" alt="Zdjęcie 3">
