--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
                     <a href="https://www.google.com/maps/place/Krężnicka+136,+20-518+Lublin" class="btn" target="_blank">Zobacz na mapie</a>
                 </div>
             </div>
+            <div class="venue-gallery">
+                <img src="images/ceremonia/kosciol-marcin-2.jpg" alt="Kościół św. Marcina - widok 2">
+                <img src="images/ceremonia/kosciol-marcin.jpg" alt="Kościół św. Marcina - widok 3">
+            </div>
         </div>
     </section>
 
@@ -93,6 +97,10 @@
                     <a href="https://www.kmicichotel.pl" class="btn" target="_blank">Strona hotelu</a>
                     <a href="https://www.google.com/maps/place/Zemborzyce+Dolne+62,+20-515+Lublin" class="btn" target="_blank" style="margin-left: 1rem;">Zobacz na mapie</a>
                 </div>
+            </div>
+            <div class="venue-gallery">
+                <img src="images/wesele/sala-kmicic.jpg" alt="Sala weselna w Hotelu Kmicic">
+                <img src="images/wesele/hotel-kmicic.jpg" alt="Hotel Kmicic - widok zewnętrzny">
             </div>
         </div>
     </section>
