--- a/index.html
+++ b/index.html
@@ -87,15 +87,13 @@
             <h2>Para Młoda</h2>
             <div class="couple-grid">
                 <div class="person">
-                    <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?w=500&h=500&fit=crop"
-                        alt="Panna Młoda">
+                    <img src="zdjecia_para/panna_mloda.jpg" alt="Panna Młoda">
                     <h3>Klaudia</h3>
                     <p>Miłośniczka książek, kawy i długich spacerów. Nie wyobrażam sobie życia bez śmiechu i przygód z
                         moim ukochanym.</p>
                 </div>
                 <div class="person">
-                    <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=500&h=500&fit=crop"
-                        alt="Pan Młody">
+                    <img src="zdjecia_para/pan_mlody.jpg" alt="Pan Młody">
                     <h3>Rafał</h3>
                     <p>Pasjonat gór, dobrej muzyki i gotowania. Z Klaudią znalazłem swoją drugą połówkę i najlepszą
                         przyjaciółkę.</p>
@@ -103,9 +101,11 @@
             </div>
             <div class="love-story">
                 <h3>Nasza Historia</h3>
-                <p>Poznaliśmy się 5 lat temu na wspólnych wakacjach w górach. Od pierwszego spojrzenia wiedzieliśmy, że
-                    to coś wyjątkowego. Po trzech latach związku, podczas romantycznego weekendu nad morzem, Rafał
-                    oświadczył się Klaudii. Teraz nie możemy się doczekać, aby podzielić się naszym szczęściem z Wami!
+                <p>Poznaliśmy się 8 lat temu w liceum, w tej samej klasie. Od pierwszych wspólnych chwil wiedzieliśmy,
+                    że to coś wyjątkowego. Nasza przyjaźń szybko przerodziła się w miłość, która z każdym rokiem stawała
+                    się coraz silniejsza. W lipcu 2024 roku, podczas romantycznej podróży do Rzymu, Rafał oświadczył się
+                    Klaudii w magicznej atmosferze Wiecznego Miasta. Teraz nie możemy się doczekać, aby podzielić się
+                    naszym szczęściem z Wami!
                 </p>
             </div>
         </div>
@@ -123,7 +123,7 @@
                     <p><strong>Telefon:</strong> 81 750 09 58</p>
                     <p><strong>Parking:</strong> Bezpłatny parking przy kościele</p>
                     <p style="margin-top: 1rem;">Kościół św. Marcina to piękna świątynia położona w malowniczej
-                        dzielnicy Zemborzyc. To szczególne miejsce dla nas - tutaj Klaudia przyjęła sakrament chrztu.
+                        dzielnicy Zemborzyc. To szczególne miejsce dla nas - tutaj Klaudia przyjęła sakrament bierzmowania.
                         Kościół otoczony jest zielenią i oferuje spokojną, uroczystą atmosferę idealną na ceremonię
                         ślubną.</p>
                     <a href="https://www.google.com/maps/place/Krężnicka+136,+20-518+Lublin" class="btn"
