--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
                     <p><strong>Telefon:</strong> 81 750 09 58</p>
                     <p><strong>Parking:</strong> Bezpłatny parking przy kościele</p>
                     <p style="margin-top: 1rem;">Kościół św. Marcina to piękna świątynia położona w malowniczej
-                        dzielnicy Zemborzyc. To szczególne miejsce dla nas - tutaj Klaudia przyjęła sakrament bierzmowania.
+                        dzielnicy Zemborzyc. To szczególne miejsce dla nas - tutaj Klaudia przyjęła sakrament
+                        bierzmowania.
                         Kościół otoczony jest zielenią i oferuje spokojną, uroczystą atmosferę idealną na ceremonię
                         ślubną.</p>
                     <a href="https://www.google.com/maps/place/Krężnicka+136,+20-518+Lublin" class="btn"
