--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </div>
             <div class="love-story">
                 <h3>Nasza Historia</h3>
-                <p>Poznaliśmy się 8 lat temu w liceum, w tej samej klasie. Od pierwszych wspólnych chwil wiedzieliśmy,
+                <p>Poznaliśmy się 9 lat temu w liceum, w tej samej klasie. Od pierwszych wspólnych chwil wiedzieliśmy,
                     że to coś wyjątkowego. Nasza przyjaźń szybko przerodziła się w miłość, która z każdym rokiem stawała
                     się coraz silniejsza. W lipcu 2024 roku, podczas romantycznej podróży do Rzymu, Rafał oświadczył się
                     Klaudii w magicznej atmosferze Wiecznego Miasta. Teraz nie możemy się doczekać, aby podzielić się
@@ -160,8 +160,8 @@
                 </div>
             </div>
             <div class="venue-gallery">
-                <img src="images/wesele/sala-kmicic.jpg" alt="Sala weselna w Hotelu Kmicic">
-                <img src="images/wesele/hotel-kmicic.jpg" alt="Hotel Kmicic - widok zewnętrzny">
+                <img src="zdjecia_hotelu/sala.jpg" alt="Sala weselna w Hotelu Kmicic">
+                <img src="zdjecia_hotelu/sala_stoly.jpg" alt="Hotel Kmicic - stoły weselne">
             </div>
         </div>
     </section>
@@ -252,7 +252,7 @@
                     <h3>🏰 Hotel Kmicic</h3>
                     <p><strong>Zemborzyce Dolne 62, 20-515 Lublin</strong></p>
                     <p>📞 Tel: +48 81 756 60 00</p>
-                    <img src="images/wesele/sala-kmicic.jpg" alt="Hotel Kmicic - sala weselna"
+                    <img src="zdjecia_hotelu/sala.jpg" alt="Hotel Kmicic - sala weselna"
                         style="width: 100%; border-radius: 10px; margin: 1rem 0;">
                     <div class="directions">
                         <h4>Dojazd:</h4>
@@ -285,7 +285,8 @@
                 <img src="images/ceremonia/kosciol-marcin.jpg" alt="Kościół św. Marcina">
                 <img src="images/ceremonia/kosciol-marcin-2.jpg" alt="Kościół św. Marcina - wnętrze">
                 <img src="images/wesele/hotel-kmicic.jpg" alt="Hotel Kmicic">
-                <img src="images/wesele/sala-kmicic.jpg" alt="Sala weselna w Hotelu Kmicic">
+                <img src="zdjecia_hotelu/sala.jpg" alt="Sala weselna w Hotelu Kmicic">
+                <img src="zdjecia_hotelu/sala_stoly.jpg" alt="Stoły weselne w Hotelu Kmicic">
                 <img src="https://images.unsplash.com/photo-1606800052052-a08af7148866?w=600" alt="Zdjęcie 1">
                 <img src="https://images.unsplash.com/photo-1511285560929-80b456fea0bc?w=600" alt="Zdjęcie 2">
                 <img src="https://images.unsplash.com/photo-1465495976277-4387d4b0b4c6?w=600" alt="Zdjęcie 3">
