--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
                 </div>
             </div>
             <div class="venue-gallery">
-                <img src="zdjecia_hotelu/sala.jpg" alt="Sala weselna w Hotelu Kmicic">
-                <img src="zdjecia_hotelu/sala_stoly.jpg" alt="Hotel Kmicic - stoły weselne">
+                <img src="zdjecia_hotel/sala.jpg" alt="Sala weselna w Hotelu Kmicic">
+                <img src="zdjecia_hotel/sala_stoly.jpg" alt="Hotel Kmicic - stoły weselne">
             </div>
         </div>
     </section>
@@ -252,7 +252,7 @@
                     <h3>🏰 Hotel Kmicic</h3>
                     <p><strong>Zemborzyce Dolne 62, 20-515 Lublin</strong></p>
                     <p>📞 Tel: +48 81 756 60 00</p>
-                    <img src="zdjecia_hotelu/sala.jpg" alt="Hotel Kmicic - sala weselna"
+                    <img src="zdjecia_hotel/sala.jpg" alt="Hotel Kmicic - sala weselna"
                         style="width: 100%; border-radius: 10px; margin: 1rem 0;">
                     <div class="directions">
                         <h4>Dojazd:</h4>
@@ -285,8 +285,8 @@
                 <img src="images/ceremonia/kosciol-marcin.jpg" alt="Kościół św. Marcina">
                 <img src="images/ceremonia/kosciol-marcin-2.jpg" alt="Kościół św. Marcina - wnętrze">
                 <img src="images/wesele/hotel-kmicic.jpg" alt="Hotel Kmicic">
-                <img src="zdjecia_hotelu/sala.jpg" alt="Sala weselna w Hotelu Kmicic">
-                <img src="zdjecia_hotelu/sala_stoly.jpg" alt="Stoły weselne w Hotelu Kmicic">
+                <img src="zdjecia_hotel/sala.jpg" alt="Sala weselna w Hotelu Kmicic">
+                <img src="zdjecia_hotel/sala_stoly.jpg" alt="Stoły weselne w Hotelu Kmicic">
                 <img src="https://images.unsplash.com/photo-1606800052052-a08af7148866?w=600" alt="Zdjęcie 1">
                 <img src="https://images.unsplash.com/photo-1511285560929-80b456fea0bc?w=600" alt="Zdjęcie 2">
                 <img src="https://images.unsplash.com/photo-1465495976277-4387d4b0b4c6?w=600" alt="Zdjęcie 3">
