--- a/index.html
+++ b/index.html
@@ -525,8 +525,9 @@
         <div class="container">
             <div class="qr-section">
                 <h3>Udostępnij stronę</h3>
-                <img src="kod_qr_wesele.jpg" alt="Kod QR do strony" class="qr-code">
+                <img src="kod_qr_wesele_nowy.jpg" alt="Kod QR do strony" class="qr-code">
                 <p>Zeskanuj kod QR, aby otworzyć stronę</p>
+                <p style="font-size: 0.9rem; color: #999; margin-top: 0.5rem;">wesele-2026.pl</p>
             </div>
             <p>&copy; 2026 Klaudia & Rafał - Z miłością dla naszych gości</p>
         </div>
